--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,3 @@
-<div class="row body">
-  <div class="col-lg-2" *ngIf="showhide">
-    <app-sidebar></app-sidebar>
+<div class="container body">
+  <router-outlet></router-outlet>
 </div>
-<div class="col-lg-10">
-  <app-navbar [showhide]="showhide"
-  (Showsedidebar)="onSidebarchange($event)"></app-navbar>
-  <app-content></app-content>
-</div>
-  </div>
-
