--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,7 @@
 <div>
+<div class="pull-right">
+  <button class="btn btn-outline-danger btn-sm" (click)="logout()">Log Out</button>
+</div>
     <a href="" data-toggle="collapse" (click)="afficherSideBar()"><i class="fa fa-bars" aria-hidden="true"></i></a>
 <hr/>
     <nav class="navbar navbar-expand-sm bg-light">
@@ -9,7 +12,7 @@
               <a class="nav-link" href="#">lik1</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">link2</a>
+              <a class="nav-link" href="#">link2</a> 
             </li>
             <li class="nav-item">
               <a class="nav-link " href="#">link3</a>
