--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,15 +1,12 @@
 <nav class="hidden-xs-down bg-faded sidebar">
 
     <ul class="nav nav-pills flex-column">
-        <li class="nav-item" >
-       <a class="nav-link active" href="#">Overview<span class="sr-only">(current)</span></a>
-        </li>
         
         <li class="nav-item">
-          <a class="nav-link" href="#">rapport</a>
+          <a class="nav-link" routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">analitic</a>
+          <a class="nav-link" routerLink="/produit" routerLinkActive="active"> Produit</a>
         </li>
         <li class="nav-item">
           <a class="nav-link " href="#">export</a>
